--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
     "fastclick": "^1.0.6",
+    "marked": "^0.5.2",
+    "muse-ui": "^3.0.1",
+    "muse-ui-progress": "^0.1.0",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
