--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "fastclick": "^1.0.6",
     "marked": "^0.5.2",
+    "mongoose": "^5.4.0",
     "muse-ui": "^3.0.1",
     "muse-ui-progress": "^0.1.0",
+    "serve-favicon": "^2.5.0",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
