--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "api": "nodemon app.js",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
@@ -13,10 +14,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "fastclick": "^1.0.6",
-    "marked": "^0.5.2",
     "mongoose": "^5.4.0",
+    "multer": "^1.4.1",
     "muse-ui": "^3.0.1",
     "muse-ui-progress": "^0.1.0",
+    "nodemon": "^1.18.9",
     "serve-favicon": "^2.5.0",
     "vconsole": "^3.2.0",
     "vue": "^2.5.17",
