--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "serve-favicon": "^2.5.0",
         "vconsole": "^3.2.0",
         "vue": "^2.5.17",
+        "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
     },
