--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "muse-ui": "^3.0.1",
         "muse-ui-loading": "^0.2.0",
         "muse-ui-progress": "^0.1.0",
+        "muse-ui-toast": "^0.3.0",
         "nodemon": "^1.18.9",
         "serve-favicon": "^2.5.0",
         "vconsole": "^3.2.0",
