--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
         "@vue/cli-service": "^3.0.3",
         "@vue/eslint-config-prettier": "^4.0.0",
         "babel-eslint": "^10.0.1",
+        "babel-plugin-import": "^1.11.0",
         "eslint": "^5.8.0",
         "eslint-plugin-vue": "^5.0.0-0",
+        "less": "^3.9.0",
+        "less-loader": "^4.1.0",
         "node-sass": "^4.9.0",
         "sass-loader": "^7.0.1",
         "vue-template-compiler": "^2.5.17"
