--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
         "express": "^4.16.4",
         "fastclick": "^1.0.6",
         "mongoose": "^5.4.0",
+        "multer": "^1.4.1",
         "muse-ui": "^3.0.1",
         "muse-ui-loading": "^0.2.0",
         "muse-ui-message": "^0.2.1",
         "muse-ui-progress": "^0.1.0",
         "muse-ui-toast": "^0.3.0",
         "nodemon": "^1.18.9",
+        "quill-image-extend-module": "^1.1.2",
         "serve-favicon": "^2.5.0",
         "vconsole": "^3.2.0",
         "vue": "^2.5.17",
