--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vconsole": "^3.2.0",
         "vue": "^2.5.17",
         "vue-canvas-nest": "^2.0.0",
+        "vue-meta-info": "^0.1.7",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1"
