--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
+        "socket": "nodemon socket.js",
         "api": "nodemon app.js",
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
@@ -30,7 +31,8 @@
         "vue-meta-info": "^0.1.7",
         "vue-quill-editor": "^3.0.6",
         "vue-router": "^3.0.1",
-        "vuex": "^3.0.1"
+        "vuex": "^3.0.1",
+        "ws": "^6.2.1"
     },
     "devDependencies": {
         "@vue/cli-plugin-babel": "^3.0.3",
