--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "nodemon": "^1.18.9",
         "quill-image-extend-module": "^1.1.2",
         "serve-favicon": "^2.5.0",
+        "socket.io": "^2.2.0",
         "vconsole": "^3.2.0",
         "vue": "^2.5.17",
         "vue-canvas-nest": "^2.0.0",
