--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "muse-ui-progress": "^0.1.0",
         "muse-ui-toast": "^0.3.0",
         "nodemon": "^1.18.9",
+        "prerender-spa-plugin": "^3.4.0",
         "quill-image-extend-module": "^1.1.2",
         "serve-favicon": "^2.5.0",
         "socket.io": "^2.2.0",
